[package]
name = "bytes-utils"
version = "0.1.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
description = "Additional utilities for working with the bytes crate"
documentation = "https://docs.rs/bytes-utils"
repository = "https://github.com/vorner/bytes-utils"
readme = "README.md"
keywords = ["bytes", "zero-copy", "buffers", "no_std"]
categories = ["data-structures"]
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", default-features = false }
either = { version = "1", default-features = false }

[features]
default = ["std"]
std = ["bytes/default", "either/default"]

[dev-dependencies]
itertools = "^0.10"
proptest = "^0.10"
